--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Xonqa Tuman 33-umumiy o'rta talim maktabi</title>
 </head>
 <body>
-    <h1>hello</h1>
+    <h1>hello world</h1>
 </body>
 </html>
