--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xonqa Tuman 33-umumiy o'rta talim maktabi</title>
 </head>
-<body>
-    <h1>hello world</h1>
+<body style="background-color: black;">
+    <h1 style="color:white">hello world</h1>
 </body>
 </html>
