--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ARSWEB.amaliyot</title>
+    <title>ARSweb.amaliyot</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body style="background-color: black;">
-    <h1 style="color:white">hello world</h1>
+<body>
+    <div class="container">
+        <div class="box shadow1">
+            <div class="card">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR3SmrptIOUabmiZ-I9vKdMzKZS0CqYF4_ZRw&usqp=CAU" alt="image ">
+            </div>
+            <div class="card">
+                <h2>card title</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum blanditiis vero, libero labore consectetur omnis. Cum, fugit quam ipsa perferendis, corporis tempore aliquid sunt eaque optio voluptatem at. Delectus quo quia labore exercitationem pariatur consequuntur accusamus inventore 
+                    dolor quae alias, iure animi fugit magni odit a ipsa nostrum eius quidem!
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
