--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ARSweb.amaliyot</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+    <nav>
+        <a class="link" href="index.html">cards1</a>
+        <a class="link" href="rycard.html">cards2</a>
+        <a class="link" href="rypcard.html">cards3</a>
+        <a class="link" href="fbcard.html">cards4</a>
+        
+    </nav>
     <div class="container">
         <div class="box shadow1">
             <div class="card">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR3SmrptIOUabmiZ-I9vKdMzKZS0CqYF4_ZRw&usqp=CAU" alt="image ">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR3SmrptIOUabmiZ-I9vKdMzKZS0CqYF4_ZRw&usqp=CAU"
+                    alt="image ">
             </div>
             <div class="card">
                 <h2>card title</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum blanditiis vero, libero labore consectetur omnis. Cum, fugit quam ipsa perferendis, corporis tempore aliquid sunt eaque optio voluptatem at. Delectus quo quia labore exercitationem pariatur consequuntur accusamus inventore 
-                    dolor quae alias, iure animi fugit magni odit a ipsa nostrum eius quidem!
+                <br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elonsequuntur accusamus inventore
+                    dolor quae alias, iure animi fugit magni odit a ipsa nostrum eius quidem!hswhsw
                 </p>
             </div>
         </div>
     </div>
 </body>
+
 </html>
