amaliy.github.io
amaliyot cardlaga o'zgartirish kiritdim

--- a/rypcard.html
+++ b/rypcard.html
@@ -8,10 +8,8 @@
 </head>
 <body>
     <nav>
-        <a class="link" href="index.html">cards1</a>
-        <a class="link" href="rycard.html">cards2</a>
-        <a class="link" href="rypcard.html">cards3</a>
-        <a class="link" href="fbcard.html">cards4</a>
+        <a class="link" href="rycard.html"><</a>
+        <a class="link" href="fbcard.html">></a>
     </nav>
     <div class="container">
         <div class="card1">card1</div>
