--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 
 <body>
     <nav>
-        <a class="link" href="index.html">cards1</a>
-        <a class="link" href="rycard.html">cards2</a>
-        <a class="link" href="rypcard.html">cards3</a>
-        <a class="link" href="fbcard.html">cards4</a>
+        <a class="link" href="index.html">|</a>
+        <a class="link" href="rycard.html">></a>
         
     </nav>
     <div class="container">
@@ -25,7 +23,7 @@
             <div class="card">
                 <h2>card title</h2>
                 <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elonsequuntur accusamus inventore
+                <p>Lorem ipsum dolor sit amet hvhghgh consectetur adipisicing elonsequuntur accusamus inventore
                     dolor quae alias, iure animi fugit magni odit a ipsa nostrum eius quidem!hswhsw
                 </p>
             </div>
