--- a/fbcard.html
+++ b/fbcard.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <a class="link" href="rypcard.html"><</a>
-        <a class="link" href="fbcard.html">|</a>
+        <a class="link" href="inputtextanimation.html">></a>
     </nav>
     <div class="container">
         <div class="cardimg">
