amaliy.github.io
waterdrop qo'shdim

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <nav>
-        <a class="link" href="index.html">|</a>
+        <a class="link" href="waterdrop.html"><</a>
         <a class="link" href="rycard.html">></a>
         
     </nav>
