--- a/index.html
+++ b/index.html
@@ -1,34 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ARSweb.amaliyot</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>ARSweb/portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
-
 <body>
-    <nav>
-        <a class="link" href="waterdrop.html"><</a>
-        <a class="link" href="rycard.html">></a>
-        
-    </nav>
-    <div class="container">
-        <div class="box shadow1">
-            <div class="card">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR3SmrptIOUabmiZ-I9vKdMzKZS0CqYF4_ZRw&usqp=CAU"
-                    alt="image ">
+    <header class="header">
+        <a href="#" class="logo">ARS.</a>
+        <nav class="navbar">
+            <a href="#" class="active">Home</a>
+            <a href="#about">About</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
+    <section class="home">
+        <div class="home-content">
+            <h1>Hi, I'm  Azizbek Rasulbekov</h1>
+            <h3>Frontend Developer</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut dolorum iure odit id error facere vitae esse officiis asperiores reiciendis, reprehenderit cumque praesentium saepe explicabo unde exercitationem dolore sapiente earum.</p>
+            <div class="btn-box">
+                <a href="#">Hire Me</a>
+                <a href="#">Let's Talk</a>
             </div>
-            <div class="card">
-                <h2>card title</h2>
-                <br>
-                <p>Lorem ipsum dolor sit amet hvhghgh consectetur adipisicing elonsequuntur accusamus inventore
-                    dolor quae alias, iure animi fugit magni odit a ipsa nostrum eius quidem!hswhsw
-                </p>
+            <div class="home-sci">
+                <a href="#" class="icon"><i class='bx bxl-telegram'></i></a>
+                <a href="#" class="icon"><i class='bx bxl-instagram-alt'></i></a>
+                <a href="#" class="icon"><i class='bx bxl-github' ></i></a>
             </div>
         </div>
-    </div>
+        
+        <div class="image">
+            <div class="img-border">
+                <img src="https://png.pngtree.com/png-clipart/20230929/original/pngtree-teenage-doing-discussion-using-laptop-3d-character-illustration-png-image_13016309.png" alt="Bu yerda rasm bor">
+            </div>
+        </div>
+    </section>
+    <aside id="about" class="languages">
+        <h2 class="title" >Deweloper skills</h2>
+        <div class="container">
+            <div class="box" style="--i:85%; --clr:#fd0a54;">
+                <div class="circle">
+                    <h2>85 <small>%</small></h2>
+                </div>
+                <h3>HTML</h3>
+            </div>
+            <div class="box" style="--i:50%; --clr:#00abf0;">
+                <div class="circle">
+                    <h2>50 <small>%</small></h2>
+                </div>
+                <h3>CSS</h3>
+            </div>
+            <div class="box" style="--i:15%; --clr:#e1fd0a;">
+                <div class="circle">
+                    <h2>15 <small>%</small></h2>
+                </div>
+                <h3>JS</h3>
+            </div>
+        </div>
+    </aside>
+    <aside  class="achivements">
+        <h2>Achivements</h2>
+        <div class="cards">
+            <div class="card">
+                <img src="https://static.vecteezy.com/system/resources/thumbnails/006/425/314/small_2x/modern-university-certificate-template-free-vector.jpg" alt="">
+            </div>
+            <div class="card">
+                <img src="https://static.vecteezy.com/system/resources/thumbnails/006/425/314/small_2x/modern-university-certificate-template-free-vector.jpg" alt="">
+            </div>
+            <div class="card">
+                <img src="https://static.vecteezy.com/system/resources/thumbnails/006/425/314/small_2x/modern-university-certificate-template-free-vector.jpg" alt="">
+            </div>
+        </div>    
+    </aside>
+    <aside id="portfolio" class="portfolio">
+        <h2>My projects</h2>
+        <div class="projects">
+            <div class="project-card">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSISVtWXGLY1jG7Jfd-L3qUdr-2fuL0QhN7h6Lt512pg13sLrJKp7wtZW1QoSE8itMtwm8&usqp=CAU" alt="">
+            </div>
+            <div class="project-card">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSISVtWXGLY1jG7Jfd-L3qUdr-2fuL0QhN7h6Lt512pg13sLrJKp7wtZW1QoSE8itMtwm8&usqp=CAU" alt="">
+            </div>
+            <div class="project-card">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSISVtWXGLY1jG7Jfd-L3qUdr-2fuL0QhN7h6Lt512pg13sLrJKp7wtZW1QoSE8itMtwm8&usqp=CAU" alt="">
+            </div>
+            <div class="project-card">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSISVtWXGLY1jG7Jfd-L3qUdr-2fuL0QhN7h6Lt512pg13sLrJKp7wtZW1QoSE8itMtwm8&usqp=CAU" alt="">
+            </div>
+        </div>
+    </aside>
+    <footer id="contact" class="end">
+        <h2>Povered by Azizbek Sotimboyev</h2>
+        <div class="home-sci">
+            <a href="#" class="icon"><i class='bx bxl-telegram'></i></a>
+            <a href="#" class="icon"><i class='bx bxl-instagram-alt'></i></a>
+            <a href="#" class="icon"><i class='bx bxl-github' ></i></a>
+        </div>
+    </footer>
 </body>
-
 </html>
