--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <section class="home">
         <div class="home-content">
-            <h1>Hi, I'm  Azizbek Rasulbekov</h1>
+            <h1>Hi, I'm  Azizbek Rasulbekovich</h1>
             <h3>Frontend Developer</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut dolorum iure odit id error facere vitae esse officiis asperiores reiciendis, reprehenderit cumque praesentium saepe explicabo unde exercitationem dolore sapiente earum.</p>
             <div class="btn-box">
